--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@heroicons/vue": "^1.0.6",
     "autoprefixer": "^10",
     "firebase": "^9.6.10",
+    "firebase-admin": "^10.3.0",
+    "firebase-functions": "^3.21.2",
+    "googleapis": "^34.0.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.11",
     "postcss": "^8",
     "tailwindcss": "^3",
